[tool.poetry]
name = "poi-confidence"
version = "0.1.0"
description = ""
authors = ["Lance Chang <virtuouslycan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.3.2"
pandas = "^1.4.1"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
